--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
   </head>
 
   <body ng-app="wordGame">
-    <div id="container" class="container">
-    <h2 class="txt text-center">Word Game</h2>
-    <div class="col-md-6 col-sm-offset-3">
-      <div class="btn btn-default btn-block">Start</div>
-    <div class="btn btn-default btn-block">High Score</div>
-    </div>
-
+    <div ng-view></div>
    <script type="text/javascript" src="dist/js/libs.js"></script>
    <script type="text/javascript" src="dist/js/main.js"></script>
   </body>
