--- a/src/home/homeView.html
+++ b/src/home/homeView.html
@@ -1,6 +1,9 @@
-<div id="container" class="container">
+<div id="container" class="container" ng-controller= "homeController" ng-init="init()">
     <h2 class="txt text-center">Word Game</h2>
     <div class="col-md-6 col-sm-offset-3">
-    <div class="btn btn-default btn-block">Start</div>
-    <div class="btn btn-default btn-block">High Score</div>
+    <div>
+    <a class="btn btn-default btn-block" href="#/word-entry">Start </a>
+    </div>
+    <div >
+    <a class="btn btn-default btn-block" href="#/scores">	High Score List </a> </div>
 </div>
