--- a/src/home/homeView.html
+++ b/src/home/homeView.html
@@ -2,7 +2,7 @@
     <h2 class="txt text-center">Word Game</h2>
     <div class="col-md-6 col-sm-offset-3">
     <div>
-    <a class="btn btn-default btn-block" href="#/word-entry">Start </a>
+    <a class="btn btn-default btn-block" href="#/word-entry" ng-click="start()">Start </a>
     </div>
     <div >
     <a class="btn btn-default btn-block" href="#/scores">	High Score List </a> </div>
