--- a/src/wordEntry/wordEntryTemplate.html
+++ b/src/wordEntry/wordEntryTemplate.html
@@ -1,4 +1,11 @@
-<h3>Word Entry</h3> 
-<div> {{model.mangledWord}} Insert your name <div>
-<input type="text"></input>Type the correct word <div> 
-<input type="text"></input>
+<div class = "page-header"> <h2>Word Game App</h2>
+</div> 
+
+<div class="mangledWord"> {{model.mangledWord}} </div> 
+<p> What is the unmangled word? </p>
+<div class="inputContainer">
+<input type="text" class="form-control" placeholder = "Insert your Name"></input>
+<input type="text" class="form-control" placeholder = "Type the correct word"></input>
+<a class="btn btn-primary btn-block" ng-click="start()">Submit </a>
+</div>
+
