submit button disabled, until the user fills in his name

--- a/src/wordEntry/wordEntryTemplate.html
+++ b/src/wordEntry/wordEntryTemplate.html
@@ -6,6 +6,6 @@
 <div class="inputContainer">
 <input type="text" class="form-control" placeholder = "Insert your Name"></input>
 <input type="text" class="form-control" placeholder = "Type the correct word"></input>
-<a class="btn btn-primary btn-block" ng-click="start()">Submit </a>
+<a class="btn btn-primary btn-block disabled" ng-click="start()">Submit </a>
 </div>
 
