--- a/index.html
+++ b/index.html
@@ -18,12 +18,20 @@
     <a class="btn btn-default btn-block" ng-click="start()">Start </a>
     </div>
     <div class="col-md-6 col-sm-offset-3">
-    <a class="btn btn-default btn-block" href="#/scores"> High Score List </a> </div>
+    <a class="btn btn-default btn-block" ng-click="viewScores()"> High Score List </a> </div>
+</div>
+<div ng-controller="wordEntryController" ng-init="init()" ng-show="model.show">
+<word-entry> </word-entry>
+
+ <div id="myModal" ng-show=""model.modal"">
+  <div class="box-content">
+    <span class="close">×</span>
+   <p> your time has run out </p>
+  </div>
 </div>
 
-<div ng-controller="wordEntryController" ng-init="init()" ng-show = "model.show">
-<word-entry> </word-entry>
 </div>
+
 
    <script type="text/javascript" src="dist/js/libs.js"></script>
    <script type="text/javascript" src="dist/js/main.js"></script>
