--- a/src/wordEntry/wordEntryTemplate.html
+++ b/src/wordEntry/wordEntryTemplate.html
@@ -1,12 +1,12 @@
 <div class = "page-header"> <h2>Word Game App</h2>
 </div> 
 
-<div class="txt"> {{model.mangledWord}} </div> 
+<h3 class="txt"> {{model.mangledWord}} </h3> 
 <p class="txt"> What is the unmangled word? </p>
 <div class="inputContainer">
-<input type="text" class="form-control" placeholder = "Insert your Name"></input>
-<input type="text" class="form-control" placeholder = "Type the correct word"></input>
-<a class="btn btn-primary btn-block disabled" ng-click="start()">Submit </a>
+<input id = "Name" type="text" class="form-control" placeholder = "Insert your Name"  ng-model= "name" ng-focus="onFocus()"></input>
+<input id= "Word" type="text"  ng-model = "word" class="form-control" placeholder = "Type the correct word"></input>
+<a id="Submit" class="btn btn-primary btn-block" disabled ng-click="submit()">Submit </a>
 </div>
 <div class="txt" id="counter">00:40</div>
 
