HighSchore list View and HighScore List Controller

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
 
   <body ng-app="wordGame">
+    <div class="home">
     <div id="container" class="container" ng-controller= "homeController" ng-init="init()" ng-show = "model.show">
     <h2 class="txt text-center">Word Game</h2>
     <div class="col-md-6 col-sm-offset-3">
@@ -20,10 +21,15 @@
     <div class="col-md-6 col-sm-offset-3">
     <a class="btn btn-default btn-block" ng-click="viewScores()"> High Score List </a> </div>
 </div>
+</div>
 <div ng-controller="wordEntryController" ng-init="init()" ng-show="model.show">
 <word-entry> </word-entry>
 </div>
 
+
+<div ng-controller="scoreListController" ng-init="init()" ng-show="model.show">
+<score-list> </score-list>
+</div>
 
    <script type="text/javascript" src="dist/js/libs.js"></script>
    <script type="text/javascript" src="dist/js/main.js"></script>
