--- a/src/home/homeView.html
+++ b/src/home/homeView.html
@@ -5,7 +5,7 @@
     <a class="btn btn-default btn-block" ng-click="start()">Start </a>
     </div>
     <div >
-    <a class="btn btn-default btn-block" href="#/scores">	High Score List </a> </div>
+    <a class="btn btn-default btn-block" ng-click="start()">	High Score List </a> </div>
 </div>
 
 <div ng-controller="wordEntryController" ng-init="init()" ng-show = "model.show">
