--- a/src/wordEntry/wordEntryTemplate.html
+++ b/src/wordEntry/wordEntryTemplate.html
@@ -1,3 +1,4 @@
+<div class="wordEntry">
 <div class = "page-header"> <h2>Word Game App</h2>
 </div> 
 
@@ -10,3 +11,4 @@
 </div>
 <div class="txt" id="counter">00:40</div>
 
+</div>
